# polla

./: .env  .gitignore  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  ALT_SOURCES_README.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  fix_all.py  fix_test_pipeline.py  fix_tests.py  license.md  main.py  mypy.ini  polla-chilena-371715-7e3e108472d0.json  polla_expanded.html  prueba.json  pyproject.toml  requirements-dev.txt  requirements.txt  spec.md  test.json  test_regex.py  test_regex2.py  test_regex3.py  todo.md
.github/workflows/: action.yml  check_credentials.yml  docs.yml  health.yml  run.yml  scrape.yml  sync-main-to-master.yml  test.yml  tests.yml  update.yml  verify-secret.yml
docs/: API.md  SLOs.md  VERSIONING.md  observability.md
docs/implementation/: IMPLEMENTATION_BACKLOG.md  IMPLEMENTATION_PLAN.md  RISK_REGISTER.md
polla_app/: __init__.py  __main__.py  analyzer.py  browser.py  cli.py  config.py  contracts.py  exceptions.py  ingest.py  models.py  net.py  notifiers.py  obs.py  pipeline.py  publish.py  scraper.py  sheets.py
polla_app/sources/: _24h.py  __init__.py  h24.py  pozos.py  t13.py
polla_scraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scratch/: debug_openloto.py  debug_polla.py  openloto_out.txt  polla.html  scrape_openloto.py
scripts/: benchmark_pozos_parsing.py
test/: other_test.py  test.py  test2.py  test3.py  test_api.py  test_api2.py  test_claude.py
tests/: __init__.py  conftest.py  test_cli_hardening.py  test_consensus.py  test_contracts.py  test_e2e.py  test_errors.py  test_health.py  test_ingest.py  test_monetary_parser.py  test_parser.py  test_parsers.py  test_phase2_hardening.py  test_phase3_hardening.py  test_phase4.py  test_pipeline.py  test_pozo_polla.py  test_publish.py  test_scraper.py  test_smoke_sources.py
tests/e2e/: test_verification_suite.py
tests/fixtures/: 24h_sorteo_5198.html  24h_sorteo_5322.html  24h_tag_index.html  invalid_date_pozo.html  malformed_pozo.html  openloto_pozo.html  polla_mock.html  (+3 more)
tools/: publish_to_sheets.py
(+3 files in other folders)
