[project]
name = "polla-scraper"
version = "2.0.0"
description = "Async Playwright scraper for Polla.cl lottery prizes"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.48.0",
    "click>=8.1.7",
    "tenacity>=8.5.0",
    "google-auth>=2.35.0",
    "google-api-python-client>=2.146.0",
]

[project.scripts]
polla = "polla_app.__main__:scrape"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=polla_app --cov-report=term-missing --cov-report=html"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
